oxiplate-derive/tests/broken/if/branches-after-else.stderr
error: `else` already present in this if statement; expected `endif`
 --> tests/broken/if/branches-after-else.rs:9:4
  |
9 | {% else %}
  |    ^^^^

error: `else` already present in this if statement; expected `endif`
  --> tests/broken/if/branches-after-else.rs:11:4
   |
11 | {% else %}
   |    ^^^^

error: `else` previously present in this if statement; expected `endif`
  --> tests/broken/if/branches-after-else.rs:13:4
   |
13 | {% elseif foo %}
   |    ^^^^^^

error: `else` previously present in this if statement; expected `endif`
  --> tests/broken/if/branches-after-else.rs:15:4
   |
15 | {% elseif foo %}
   |    ^^^^^^

error: Unexpected 'else' statement
  --> tests/broken/if/branches-after-else.rs:18:4
   |
18 | {% else %}")]
   |    ^^^^
